<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/album_textview"
        style="@style/homeList"
        android:background="@color/list1"
        android:text="@string/album_list" />

    <TextView
        android:id="@+id/genre_textview"
        style="@style/homeList"
        android:background="@color/list2"
        android:text="@string/genre_list" />

    <TextView
        android:id="@+id/song_textview"
        style="@style/homeList"
        android:background="@color/list1"
        android:text="@string/song_list" />

    <TextView
        android:id="@+id/artist_textview"
        style="@style/homeList"
        android:background="@color/list2"
        android:text="@string/artist_list" />


</LinearLayout>